<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".Bai3_Intent_Explicit">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_tittle"
        android:text="@string/text_tittle"
        android:gravity="center"
        android:padding="32dp"
        android:textSize="32sp"
        android:clickable="false"
        android:focusable="false"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        android:layout_marginBottom="16dp"
        />
    <EditText
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/color_hint_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:textSize="24sp"
        android:hint="@string/hint_name"
        />

    <EditText
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/color_hint_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_address"
        android:textSize="24sp"
        android:hint="@string/hint_address"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:background="@drawable/custom_edittext"
        android:textColorHint="@color/color_hint_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_tel"
        android:textSize="24sp"
        android:hint="@string/hint_phone_number"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="10"
        />

    <Button
        android:id="@+id/btn_agree"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_agree"
        android:padding="24dp"
        android:text="@string/text_button_agree"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>